--- a/part3/phonebook_backend/package.json
+++ b/part3/phonebook_backend/package.json
@@ -11,7 +11,9 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "mongoose": "^8.18.0",
     "morgan": "^1.10.1"
   }
 }
