--- a/part3/phonebook_backend/package.json
+++ b/part3/phonebook_backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node --watch index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "author": "Niyonkuru Fabrice",
   "license": "MIT",
@@ -15,5 +16,11 @@
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.35.0",
+    "@stylistic/eslint-plugin-js": "^4.4.1",
+    "eslint": "^9.35.0",
+    "globals": "^16.3.0"
   }
 }
