--- a/part4/blog_list/package.json
+++ b/part4/blog_list/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --watch index.js"
   },
   "author": "Niyonkuru Fabrice",
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.0"
   }
