--- a/part4/blog_list/package.json
+++ b/part4/blog_list/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch index.js"
+    "start": "node index.js",
+    "test": "node --test",
+    "dev": "node --watch index.js",
+    "lint": "eslint ."
   },
   "author": "Niyonkuru Fabrice",
   "license": "MIT",
